--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 
       <!-- Masthead Avatar Image -->
       <div class="rcorners1">
-      <img class="masthead-avatar mb-5" src="img/me.png" alt="">
+        <img class="masthead-avatar mb-5" src="img/me.png" alt="">
       </div>
-    
+
 
       <!-- Masthead Heading -->
       <h1 class="masthead-heading text-uppercase mb-0">Content Creator</h1>
@@ -105,7 +105,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+            <img class="img-fluid" src="img/asi.jpg" alt="">
           </div>
         </div>
 
@@ -117,7 +117,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/cake.png" alt="">
+            <img class="img-fluid" src="img/music.jpg" alt="">
           </div>
         </div>
 
@@ -129,7 +129,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+            <img class="img-fluid" src="img/Hannah.JPG" alt="">
           </div>
         </div>
 
@@ -141,7 +141,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/game.png" alt="">
+            <img class="img-fluid" src="img/rps.jpg" alt="">
           </div>
         </div>
 
@@ -153,7 +153,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/safe.png" alt="">
+            <img class="img-fluid" src="img/real-estate.jpg" alt="">
           </div>
         </div>
 
@@ -165,7 +165,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
+            <img class="img-fluid" src="img/meditation.JPG" alt="">
           </div>
         </div>
 
@@ -200,7 +200,7 @@
         </div>
         <div class="col-lg-4 mr-auto">
           <p class="lead">8 years - Video Production<br />
-            4 years - Social Media<br />
+            4 years - Social Media/Copywriting<br />
             3 years - Web Design<br />
             <hr />
             University of Denver - Web Development<br />
@@ -295,7 +295,7 @@
         <!-- Footer About Text -->
         <div class="col-lg-4">
           <h4 class="text-uppercase mb-4">Contact Info</h4>
-          <p class="lead mb-0">303.349.0821<br>Jennifer Kjerstad</p>
+          <p class="lead mb-0">303.349.0821<br>JenniferKjerstad@gmail.com</p>
         </div>
 
       </div>
@@ -343,11 +343,9 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <iframe style="margin-left:-5%" src="https://www.youtube.com/watch?v=iMx-Z4Cqk_E&list=PLTGrSJz9XeEVjpQyqJySLFcXdxMPRTir4&index=4&t=5s" >
-                  <!--source href="https://vimeo.com/248890663" type="video/mp4">
-                  <source href="https://vimeo.com/248890663" type="video/ogg">
-                  Your browser does not support HTML5 video. --->
-                  </iframe>
+                <a href="https://vimeo.com/248890663">
+                  <img class="img-fluid" src="img/ASI.JPG" alt="">
+                </a>
                 <!-- Portfolio Modal - Text -->
                 <h3 class="mb-5">ASI Dental- Media Director</h3>
                 <p>Writer, producer, and editor for all things video, photo, and social media related.<br />Also
@@ -389,14 +387,16 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <a href="https://jenniferkjerstad.github.io/meditationapp/" img="hfdkjhwjshdfhwksdbs">
-                <!-- Portfolio Modal - Text -->
-                <h3>Play some music!</h3>
-                <p class="mb-5">Follow the link to my little music app and make some noise!</p>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
-                  <i class="fas fa-times fa-fw"></i>
-                  Close Window
-                </button>
+                <a href="https://jenniferkjerstad.github.io/JS-music/">
+                  <img class="img-fluid" src="img/music.JPG" alt="">
+                  </a>
+                  <!-- Portfolio Modal - Text -->
+                  <h3>Play some music!</h3>
+                  <p class="mb-5">Follow the link to my little music app and make some noise!</p>
+                  <button class="btn btn-primary" href="#" data-dismiss="modal">
+                    <i class="fas fa-times fa-fw"></i>
+                    Close Window
+                  </button>
               </div>
             </div>
           </div>
@@ -430,11 +430,9 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <video width="800" style="margin-left:-5%" controls>
-                  <source href="https://vimeo.com/21734410" type="video/mp4">
-                  <source href="https://vimeo.com/21734410" type="video/ogg">
-                  Your browser does not support HTML5 video.
-                </video>
+                <a href="https://www.youtube.com/watch?v=jyRrHjYALGA&list=PLTGrSJz9XeEWdhX4yy97vhqNLnfPcUB0T&index=2&t=4s">
+                  <img class="img-fluid" src="img/Hannah.JPG" alt="">
+                  </a>
                 <!-- Portfolio Modal - Text -->
                 <h3>Family 2 Family Promotional Video</h3>
                 <p class="mb-5">One of my first videos ever made!<br /> Still in use at adoption events on a national
@@ -476,14 +474,16 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <a href="https://jenniferkjerstad.github.io/meditationapp/" img="hfdkjhwjshdfhwksdbs">
-                <!-- Portfolio Modal - Text -->
-                <h3>Try to beat the computer!</h3>
-                <p class="mb-5">The opponent's choices are randomized, I swear!</p>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
-                  <i class="fas fa-times fa-fw"></i>
-                  Close Window
-                </button>
+                <a href="https://jenniferkjerstad.github.io/rockpaperscissors/">
+                  <img class="img-fluid" src="img/RPS.JPG" alt="">
+                  </a>
+                  <!-- Portfolio Modal - Text -->
+                  <h3>Try to beat the computer!</h3>
+                  <p class="mb-5">The opponent's choices are randomized, I swear!</p>
+                  <button class="btn btn-primary" href="#" data-dismiss="modal">
+                    <i class="fas fa-times fa-fw"></i>
+                    Close Window
+                  </button>
               </div>
             </div>
           </div>
@@ -491,7 +491,7 @@
       </div>
     </div>
   </div>
- 
+
   <!-- Portfolio Modal 5 -->
   <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog"
     aria-labelledby="portfolioModal5Label" aria-hidden="true">
@@ -562,14 +562,16 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <a href="https://jenniferkjerstad.github.io/meditationapp/" img="hfdkjhwjshdfhwksdbs">
-                <!-- Portfolio Modal - Text -->
-                <h3>Relax!</h3>
-                <p class="mb-5">Take 5 minutes and ground yourself using my meditation app!</p>
-                <button class="btn btn-primary" href="#" data-dismiss="modal">
-                  <i class="fas fa-times fa-fw"></i>
-                  Close Window
-                </button>
+                <a href="https://jenniferkjerstad.github.io/meditationapp/">
+                  <img class="img-fluid" src="img/meditation.JPG" alt="">
+                  </a>
+                  <!-- Portfolio Modal - Text -->
+                    <h3>Relax!</h3>
+                    <p class="mb-5">Take 5 minutes and ground yourself using my meditation app!</p>
+                    <button class="btn btn-primary" href="#" data-dismiss="modal">
+                      <i class="fas fa-times fa-fw"></i>
+                      Close Window
+                    </button>
               </div>
             </div>
           </div>
