--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/asi.jpg" alt="">
+            <img class="img-fluid" src="img/asi.jpg" alt="videoediting">
           </div>
         </div>
 
@@ -117,7 +117,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/music.jpg" alt="">
+            <img class="img-fluid" src="img/music.jpg" alt="Javascript">
           </div>
         </div>
 
@@ -129,7 +129,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/Hannah.JPG" alt="">
+            <img class="img-fluid" src="img/Hannah.JPG" alt="video editing">
           </div>
         </div>
 
@@ -141,7 +141,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/rps.jpg" alt="">
+            <img class="img-fluid" src="img/rps.jpg" alt="Javascript">
           </div>
         </div>
 
@@ -153,7 +153,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/real-estate.jpg" alt="">
+            <img class="img-fluid" src="img/real-estate.jpg" alt="videoediting">
           </div>
         </div>
 
@@ -165,7 +165,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/meditation.JPG" alt="">
+            <img class="img-fluid" src="img/meditation.JPG" alt="Javascript">
           </div>
         </div>
 
