--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/asi.jpg" alt="videoediting">
+            <img class="img-fluid" src="img/asi.JPG" alt="videoediting">
           </div>
         </div>
 
@@ -117,7 +117,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/music.jpg" alt="Javascript">
+            <img class="img-fluid" src="img/music.JPG" alt="Javascript">
           </div>
         </div>
 
@@ -141,7 +141,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/rps.jpg" alt="Javascript">
+            <img class="img-fluid" src="img/rps.JPG" alt="Javascript">
           </div>
         </div>
 
@@ -153,7 +153,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/real-estate.jpg" alt="videoediting">
+            <img class="img-fluid" src="img/real-estate.JPG" alt="videoediting">
           </div>
         </div>
 
@@ -168,10 +168,7 @@
             <img class="img-fluid" src="img/meditation.JPG" alt="Javascript">
           </div>
         </div>
-
       </div>
-      <!-- /.row -->
-
     </div>
   </section>
 
@@ -195,8 +192,8 @@
       <div class="row">
         <div class="col-lg-4 ml-auto">
           <p class="lead">Hello! I'm Jennifer.<br />
-            I design beautiful, quality websites for new and established businesses around the US.
-            I produce quality videos for promotional, creative, and educational purposes.</p>
+            I design beautiful, quality websites and videos for new and established businesses around the US.
+            I produce quality content for promotional, creative, and educational purposes.</p>
         </div>
         <div class="col-lg-4 mr-auto">
           <p class="lead">8 years - Video Production<br />
@@ -213,10 +210,10 @@
  
 
      
-      <section class="page-section" id="contact">
+      
   <!-- Footer -->
   <footer class="footer text-center">
-    <div class="container">
+    <div class="container" id="contact">
       <div class="row">
 
         <!-- Footer Location -->
