--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 </div>
                 <!-- Portfolio Modal - Image -->
                 <a href="https://vimeo.com/248890663">
-                  <img class="img-fluid" src="img/ASI.JPG" alt="">
+                  <img class="img-fluid" src="img/ASI.png" alt="">
                 </a>
                 <!-- Portfolio Modal - Text -->
                 <h3 class="mb-5">ASI Dental- Media Director</h3>
@@ -321,7 +321,7 @@
                 </div>
                 <!-- Portfolio Modal - Image -->
                 <a href="https://jenniferkjerstad.github.io/JS-music/">
-                  <img class="img-fluid" src="img/music.JPG" alt="">
+                  <img class="img-fluid" src="img/music.png" alt="">
                   </a>
                   <!-- Portfolio Modal - Text -->
                   <h3>Play some music!</h3>
@@ -361,7 +361,7 @@
                 </div>
                 <!-- Portfolio Modal - Image -->
                 <a href="https://www.youtube.com/watch?v=jyRrHjYALGA&list=PLTGrSJz9XeEWdhX4yy97vhqNLnfPcUB0T&index=2&t=4s">
-                  <img class="img-fluid" src="img/Hannah.JPG" alt="">
+                  <img class="img-fluid" src="img/Hannah.png" alt="">
                   </a>
                 <!-- Portfolio Modal - Text -->
                 <h3>Family 2 Family Promotional Video</h3>
@@ -402,7 +402,7 @@
                 </div>
                 <!-- Portfolio Modal - Image -->
                 <a href="https://jenniferkjerstad.github.io/rockpaperscissors/">
-                  <img class="img-fluid" src="img/RPS.JPG" alt="">
+                  <img class="img-fluid" src="img/RPS.png" alt="">
                   </a>
                   <!-- Portfolio Modal - Text -->
                   <h3>Try to beat the computer!</h3>
@@ -487,12 +487,16 @@
                 </div>
                 <!-- Portfolio Modal - Image -->
                 <a href="https://jenniferkjerstad.github.io/meditationapp/">
-                  <img class="img-fluid" src="img/meditation.JPG" alt="">
+                  <img class="img-fluid" src="img/meditation.png" alt="">
                   </a>
                   <!-- Portfolio Modal - Text -->
                     <h3>Relax!</h3>
                     <p class="mb-5">Take 5 minutes and ground yourself using my meditation app!</p>
-                    
+                    <button class="btn btn-primary" href="#" data-dismiss="modal">
+                      <i class="fas fa-times fa-fw"></i>
+                      Close Window
+                    </button>
+              </div>
             </div>
           </div>
         </div>
