--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <div class="col-lg-4 mr-auto">
           <p class="lead">8 years - Video Production<br />
             4 years - Social Media/Copywriting<br />
-            3 years - Web Design<br />
+            1 year - Web Design<br />
             <hr />
             University of Denver - Web Development<br />
             Parson's School of Design - Visual Communication
