--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/rps.JPG" alt="Javascript">
+            <img class="img-fluid" src="img/RPS.png" alt="Javascript">
           </div>
         </div>
 
