--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/asi.png" alt="videoediting">
+            <img class="img-fluid test" src="img/ASI.png" alt="videoediting">
           </div>
         </div>
 
